Some refactoring and generalization work

--- a/cryptolib.vcxproj
+++ b/cryptolib.vcxproj
@@ -169,13 +169,18 @@
   <ItemGroup>
     <ClInclude Include="crypto.h" />
     <ClInclude Include="crypto_internal.h" />
+    <ClInclude Include="des.h" />
     <ClInclude Include="paddings.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="sha-1.h" />
+    <ClInclude Include="sha-2.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="consts.c" />
+    <ClCompile Include="crypto.c" />
     <ClCompile Include="crypto_internal.c" />
     <ClCompile Include="des.c" />
+    <ClCompile Include="hmac.c" />
     <ClCompile Include="paddings.c" />
     <ClCompile Include="pch.c">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
