--- a/cryptolib.vcxproj.filters
+++ b/cryptolib.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClInclude Include="crypto.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="crypto_internal.h">
+    <ClInclude Include="crypto_helpers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="paddings.h">
@@ -34,6 +34,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="des.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="crypto_internal.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="hmac.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -50,7 +56,7 @@
     <ClCompile Include="paddings.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="crypto_internal.c">
+    <ClCompile Include="crypto_helpers.c">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="sha-1.c">
@@ -63,6 +69,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="crypto.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="kdf.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
