--- a/cryptolib.vcxproj.filters
+++ b/cryptolib.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="hmac.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="kdf.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="des.c">
