Added keccak_p function
Work on sha-3 continues

--- a/cryptolib.vcxproj
+++ b/cryptolib.vcxproj
@@ -177,6 +177,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="sha-1.h" />
     <ClInclude Include="sha-2.h" />
+    <ClInclude Include="sha-3.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="consts.c" />
