--- a/CryptoTests/CryptoTests.vcxproj
+++ b/CryptoTests/CryptoTests.vcxproj
@@ -53,9 +53,13 @@
     <OutDir>$(ProjectName)$(Configuration)\</OutDir>
   </PropertyGroup>
   <ItemGroup>
+    <ClInclude Include="common.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="common.cpp" />
+    <ClCompile Include="GetHashMultipleT.cpp" />
+    <ClCompile Include="GetHashT.cpp" />
     <ClCompile Include="test.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
