Added GetPrf all and some GetPbkdf2 tests
Corrected some input checkings
Corrected IsWholeBlockMultiplier function

--- a/CryptoTests/CryptoTests.vcxproj
+++ b/CryptoTests/CryptoTests.vcxproj
@@ -61,6 +61,8 @@
     <ClCompile Include="GetHashExT.cpp" />
     <ClCompile Include="GetHashMultipleT.cpp" />
     <ClCompile Include="GetHashT.cpp" />
+    <ClCompile Include="GetPbkdf2T.cpp" />
+    <ClCompile Include="GetPrfT.cpp" />
     <ClCompile Include="GetXofMultipleT.cpp" />
     <ClCompile Include="GetXofT.cpp" />
     <ClCompile Include="test.cpp" />
