Refactoring and generalization in progress

--- a/CryptoLib/cryptolib.vcxproj.filters
+++ b/CryptoLib/cryptolib.vcxproj.filters
@@ -83,6 +83,9 @@
     <ClCompile Include="sha-3.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="crypto_internal.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
