--- a/CryptoLib/cryptolib.vcxproj
+++ b/CryptoLib/cryptolib.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -168,6 +168,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="block_ciphers_main.h" />
     <ClInclude Include="crypto.h" />
     <ClInclude Include="crypto_helpers.h" />
     <ClInclude Include="crypto_internal.h" />
@@ -181,6 +182,7 @@
     <ClInclude Include="sha-3.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="block_ciphers_main.c" />
     <ClCompile Include="consts.c" />
     <ClCompile Include="crypto.c" />
     <ClCompile Include="crypto_helpers.c" />
