--- a/CryptoLib/cryptolib.vcxproj.filters
+++ b/CryptoLib/cryptolib.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="sha-3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="block_ciphers_main.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="des.c">
@@ -84,6 +87,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="crypto_internal.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="block_ciphers_main.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
