--- a/CryptoTests/CryptoTests.vcxproj
+++ b/CryptoTests/CryptoTests.vcxproj
@@ -55,11 +55,24 @@
   <ItemGroup>
     <ClInclude Include="common.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="ProcessingByBlockCipherTestSupportFunctions.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BlockCipherStateFuncsT.cpp" />
     <ClCompile Include="common.cpp" />
-    <ClCompile Include="DecryptByBlockCipherT.cpp" />
-    <ClCompile Include="EncryptByBlockCipherT.cpp" />
+    <ClCompile Include="ProcessingByBlockCipherCommonT.cpp" />
+    <ClCompile Include="ProcessingByBlockCipherDecryptionT.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="ProcessingByBlockCipherEncryptionT.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="GetHashExT.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
@@ -82,7 +95,8 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="GetXofT.cpp" />
-    <ClCompile Include="HashSupportFuncsT.cpp" />
+    <ClCompile Include="HashStateFuncsT.cpp" />
+    <ClCompile Include="ProcessingByBlockCipherTestSupportFunctions.cpp" />
     <ClCompile Include="test.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
