--- a/CryptoTests/CryptoTests.vcxproj.filters
+++ b/CryptoTests/CryptoTests.vcxproj.filters
@@ -2,8 +2,6 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="common.cpp" />
-    <ClCompile Include="DecryptByBlockCipherT.cpp" />
-    <ClCompile Include="EncryptByBlockCipherT.cpp" />
     <ClCompile Include="GetHashExT.cpp" />
     <ClCompile Include="GetPbkdf2ExT.cpp" />
     <ClCompile Include="GetPbkdf2T.cpp" />
@@ -15,13 +13,31 @@
     <ClCompile Include="GetHashT.cpp">
       <Filter>HashFuncsTests</Filter>
     </ClCompile>
-    <ClCompile Include="HashSupportFuncsT.cpp">
+    <ClCompile Include="HashStateFuncsT.cpp">
       <Filter>HashFuncsTests</Filter>
+    </ClCompile>
+    <ClCompile Include="ProcessingByBlockCipherDecryptionT.cpp">
+      <Filter>BlockCiphersTests</Filter>
+    </ClCompile>
+    <ClCompile Include="ProcessingByBlockCipherEncryptionT.cpp">
+      <Filter>BlockCiphersTests</Filter>
+    </ClCompile>
+    <ClCompile Include="ProcessingByBlockCipherTestSupportFunctions.cpp">
+      <Filter>BlockCiphersTests</Filter>
+    </ClCompile>
+    <ClCompile Include="BlockCipherStateFuncsT.cpp">
+      <Filter>BlockCiphersTests</Filter>
+    </ClCompile>
+    <ClCompile Include="ProcessingByBlockCipherCommonT.cpp">
+      <Filter>BlockCiphersTests</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="ProcessingByBlockCipherTestSupportFunctions.h">
+      <Filter>BlockCiphersTests</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -29,6 +45,9 @@
   <ItemGroup>
     <Filter Include="HashFuncsTests">
       <UniqueIdentifier>{b7f2e1d9-05d2-4d07-a38d-ded01080c537}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="BlockCiphersTests">
+      <UniqueIdentifier>{e02d9c41-2167-4b4e-91aa-8a5f11497a40}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
