--- a/CryptoLib/cryptolib.vcxproj.filters
+++ b/CryptoLib/cryptolib.vcxproj.filters
@@ -83,7 +83,7 @@
     <ClCompile Include="sha-3.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="crypto_internal.cpp">
+    <ClCompile Include="crypto_internal.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
