--- a/CryptoLib/cryptolib.vcxproj
+++ b/CryptoLib/cryptolib.vcxproj
@@ -168,6 +168,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="aes.h" />
     <ClInclude Include="crypto.h" />
     <ClInclude Include="crypto_helpers.h" />
     <ClInclude Include="crypto_internal.h" />
@@ -181,6 +182,7 @@
     <ClInclude Include="sha-3.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="aes.c" />
     <ClCompile Include="consts.c" />
     <ClCompile Include="crypto.c" />
     <ClCompile Include="crypto_helpers.c" />
