--- a/CryptoLib/cryptolib.vcxproj.filters
+++ b/CryptoLib/cryptolib.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="sha-3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="aes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="des.c">
@@ -84,6 +87,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="crypto_internal.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="aes.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
