--- a/CryptoLib/cryptolib.vcxproj
+++ b/CryptoLib/cryptolib.vcxproj
@@ -158,7 +158,8 @@
     </MASM>
     <MASM>
       <EnableAssemblyGeneratedCodeListing>false</EnableAssemblyGeneratedCodeListing>
-      <UseSafeExceptionHandlers>true</UseSafeExceptionHandlers>
+      <UseSafeExceptionHandlers>
+      </UseSafeExceptionHandlers>
     </MASM>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -186,7 +187,8 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <MASM>
-      <UseSafeExceptionHandlers>true</UseSafeExceptionHandlers>
+      <GeneratePreprocessedSourceListing>
+      </GeneratePreprocessedSourceListing>
     </MASM>
   </ItemDefinitionGroup>
   <ItemGroup>
